--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,30 @@
   @apply min-h-[200px] file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive;
 }
 
+.ProseMirror h1 {
+  @apply text-3xl font-bold;
+}
+
+.ProseMirror h2 {
+  @apply text-2xl font-bold;
+}
+
+.ProseMirror h3 {
+  @apply text-xl font-bold;
+}
+
+.ProseMirror h4 {
+  @apply text-lg font-bold;
+}
+
+.ProseMirror h5 {
+  @apply text-base font-bold;
+}
+
+.ProseMirror h6 {
+  @apply text-sm font-bold;
+}
+
 :root {
   --background: oklch(0.99 0 0);
   --foreground: oklch(0.2 0 0);
