--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "highlight.js/styles/atom-one-light.css";
+
+.dark {
+  @import "highlight.js/styles/atom-one-dark.css";
+}
 
 @custom-variant dark (&:is(.dark *));
 
@@ -176,11 +181,12 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
 
-li > p {
+li>p {
   @apply inline m-0;
 }
